@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.4</version>
+		<version>3.3.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -17,9 +17,9 @@
 	<description>tseday advert app</description>
 
 	<properties>
-		<java.version>21</java.version>
 		<spring-cloud-function.version>4.0.5</spring-cloud-function.version>
 		<wrapper.version>1.0.27.RELEASE</wrapper.version>
+	 <maven.compiler.release>23</maven.compiler.release>
 	</properties>
 
 
@@ -56,14 +56,13 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.6.0</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.facebook.business.sdk/facebook-java-business-sdk -->
 		<dependency>
 			<groupId>com.facebook.business.sdk</groupId>
 			<artifactId>facebook-java-business-sdk</artifactId>
-			<version>19.0.0</version>
+			<version>20.0.2</version>
 		</dependency>
 
 
@@ -71,7 +70,6 @@
 		<dependency>
 			<groupId>jakarta.json</groupId>
 			<artifactId>jakarta.json-api</artifactId>
-			<version>2.1.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
@@ -85,7 +83,7 @@
 			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.16.2</version>
+			<version>1.18.1</version>
 		</dependency>
 
 
@@ -141,10 +139,11 @@
 		 <plugin>
 		  <groupId>org.apache.maven.plugins</groupId>
 		  <artifactId>maven-compiler-plugin</artifactId>
+		  <version>3.11.0</version>
 		  <configuration>
-		   <arg>--enable-preview</arg>
 		   <compilerArgs>
 		    <arg>--enable-preview</arg>
+		   
 		   </compilerArgs>
 		  </configuration>
 		 </plugin>
